# InfraForge

./: .env.example  .gitignore  AGENTS.md  Contestant - GitHub Copilot SDK.md  DEMO_GUIDE.md  README.md  VIDEO_SCRIPT.md  azure_infrastructure_test.py  badge.html  cdn-profile-fixed.json  cdn-profile-template.json  mcp.json  plan.md  requirements.txt  start.ps1  start.py  web_start.py
InfraForgePipelineEngine/: Dockerfile  pyproject.toml
InfraForgePipelineEngine/examples/: README.md  autoiac_generate.json  infraforge_onboarding.json  simple_deploy.json
InfraForgePipelineEngine/scripts/: run_pipelines.py
InfraForgePipelineEngine/scripts/pipelines/: 01_hello_world.yaml  02_multi_stage.yaml  03_routing.yaml  04_conditions.yaml  05_healing.yaml  06_shell_step.yaml  07_dry_run.yaml  08_full_integration.yaml  09_service_onboarding.yaml  10_simple_approval.yaml
InfraForgePipelineEngine/src/pipeline_engine/: __init__.py  app.py  config.py
InfraForgePipelineEngine/src/pipeline_engine/engine/: executor.py  healing.py  routing.py  run_store.py
InfraForgePipelineEngine/src/pipeline_engine/models/: context.py  events.py  pipeline.py  results.py
InfraForgePipelineEngine/src/pipeline_engine/routers/: catalog.py  pipelines.py
InfraForgePipelineEngine/src/pipeline_engine/steps/: base.py  gate_step.py  http_step.py  llm_step.py  noop_step.py  python_step.py  registry.py  shell_step.py
InfraForgePipelineEngine/tests/: conftest.py  test_api.py  test_executor.py  test_healing.py  test_models.py  test_registry.py
docs/: ARCHITECTURE.md  README.md  SETUP.md  TECHNICAL.md  (+1 more)
(+92 files in other folders)
